manifests/sidecar-mode/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-experiments-with-sidecar-mode
