manifests/sidecar-mode/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: strict-mtls
  namespace: istio-experiments-application-with-sidecar-mode
spec:
  mtls:
    mode: STRICT
