manifests/sidecar-mode/request-authentication.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: no-jwt-validation-to-microservice-a
  namespace: istio-experiments-sidecar-mode-application
spec:
  selector:
    matchLabels:
      microservice: a
  jwtRules: []
