manifests/sidecar-mode/authorization-policies.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: microservices-from-any-with-headers-to-a
  namespace: istio-experiments-application-with-sidecar-mode
spec:
  action: ALLOW
  rules:
  - from:
    - source: []
    to:
    - operation:
        methods: ["GET"]
        paths: ["/endpoint"]
        ports: ["80"]
  selector:
    matchLabels:
      microservice: a
  when:
    - key: "request.headers[User-Agent]"
      values:
        - "a-very-handsome-client"
        - "another-very-handsome-client"
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: microservices-from-a-to-b
  namespace: istio-experiments-application-with-sidecar-mode
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["istio-experiments-application-with-sidecar-mode"]
        principals: ["cluster.local/ns/istio-experiments-application-with-sidecar-mode/sa/microservice-a"]
    to:
    - operation:
        methods: ["GET"]
        paths: ["/endpoint"]
        ports: ["80"]
  selector:
    matchLabels:
      microservice: b
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: microservices-from-b-to-c
  namespace: istio-experiments-application-with-sidecar-mode
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["istio-experiments-application-with-sidecar-mode"]
        principals: ["cluster.local/ns/istio-experiments-application-with-sidecar-mode/sa/microservice-b"]
    to:
    - operation:
        methods: ["GET"]
        paths: ["/endpoint"]
        ports: ["80"]
  selector:
    matchLabels:
      microservice: c
